# ESP_COURSE

./: README.md
button-experiments/: Cargo.toml
button-experiments/examples/: irq.rs  simple_blocking.rs
cardputer-noasync/: Cargo.toml
embassy-workspace/: .gitignore  Cargo.toml  build.rs  clippy.toml  config.json  main.rs
embassy-workspace/examples/misc/: changes.md
embassy-workspace/examples/misc/external_config/: build.rs  read_config.rs
embassy-workspace/examples/peripherals/: btn_with_led.rs  signalling_btn.rs
embassy-workspace/examples/peripherals/spi/: README.md  async_display.rs  sd_simple_read.rs  sd_simple_write_with_timestamp.rs
embassy-workspace/examples/sync_primitives/: SYNC_PRIMITIVES.md  channel_with_multiple_tasks.rs  pubsub_channel.rs  rw_from_tasks_with_async_mutex.rs  rw_from_tasks_with_atomic.rs  rw_from_tasks_with_mutex.rs  signal_to_single_task.rs
m5stack_fun_workspace/: Cargo.toml
m5stack_fun_workspace/cardputer_client/: Cargo.toml
m5stack_fun_workspace/cardputer_client/src/: ble.rs  lib.rs
m5stack_fun_workspace/docs/: test_system_arch.md
m5stack_fun_workspace/docs/BLE/: ATT.md  Connections.md  GATT.md  ПримерGATT.md
m5stack_fun_workspace/shared_lib/: Cargo.toml
m5stack_fun_workspace/shared_lib/src/: lib.rs
m5stack_fun_workspace/stam_plc_server/: Cargo.toml
wokwi-interaction/: Cargo.toml  diagram.json  wokwi.toml
wokwi-interaction/docs/: PWM.md  TIMERS.md
wokwi-interaction/examples/: one_shot_timer_with_btn.rs  periodic_timer_with_btn.rs
wokwi-interaction/examples/i2c/: shtc_raw_simple.rs  shtc_with_crate.rs
wokwi-interaction/examples/ledc/: basic.rs  basic_manual.rs
wokwi-interaction/examples/rmt/: neopixel.rs
wokwi-interaction/examples/serial/: at_commands.rs  rx_blocking.rs  rx_idle_irq.rs  rx_tx_blocking.rs  tx_blocking.rs
wokwi-interaction/examples/timers/: duration_since_boot.rs  duration_since_timer_starts.rs  pseudo_real_time_clock.rs  real_time_timer.rs  timg_with_irq.rs  watchdog_simple.rs
