[package]
edition      = "2024"
name         = "embassy-workspace"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "embassy-workspace"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32s3", "log-04"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time     = { version = "0.5.0", features = ["log"] }
embassy-sync     = { version = "0.7.2", features = ["log"] }
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }


embassy-embedded-hal = "0.5.0"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.1"
embedded-hal    = "1.0.0"
lcd-async = "0.1.1"
static_cell = "2.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
