[package]
edition      = "2024"
name         = "embassy-workspace"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "embassy-workspace"
path = "./src/bin/main.rs"


[lints.clippy]
# Pedantic (очень полезен для embedded)
pedantic = { level = "warn", priority = -1 }
# Исключения из pedantic которые могут быть слишком строги
missing_const_for_fn = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
single_call_fn = "allow"


panic_in_result_fn = "deny"
todo = "warn"
unimplemented = "warn"
unwrap_used = "deny"
indexing_slicing = "deny"
# No-std специфичные
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"
alloc_instead_of_core = "deny"
# Безопасность при работе с памятью
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"


# Крейты, которые используются в процессе сборки проекта (становятся доступны в build.rs)
[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp32s3", "log-04"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time     = { version = "0.5.0", features = ["log"] }
embassy-sync     = { version = "0.7.2", features = ["log"] }
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }
embassy-futures  = { version = "0.1.2", features = ["log"] }

embedded-sdmmc = "0.9.0"
lcd-async = "0.1.1"
embedded-graphics = "0.8.1"
static_cell = "2.1.1"
# To convert Spi bus to SpiDevice
embedded-hal-bus = "0.3.0"
bitmask-enum = "2.2.5"
heapless = "0.9.2"
## For time parsing
jiff = { version = "0.2.16", default-features = false, features = ["static"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2     # Debug info included in compiled binary - 0: none, 1: line numbers, 2: full
debug-assertions = false # Debug assertion - disabled
incremental      = false # Incremental compilation - disabled
lto              = 'fat' # Link-time optimization - fat: Perform optimization across all crates
opt-level        = 's' # Optimize compile - s: optimize for binary size
overflow-checks  = false # Integer overflow checks - disabled
